--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.0.*",
-		"cviebrock/eloquent-sluggable": "1.0.*"
+		"cviebrock/eloquent-sluggable": "1.0.*",
+		"way/generators": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
